Remove Windows run instructions from build